--- a/Genetic Cars/MainWindow.resx
+++ b/Genetic Cars/MainWindow.resx
@@ -120,6 +120,9 @@
   <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>21, 16</value>
   </metadata>
+  <metadata name="toolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>21, 16</value>
+  </metadata>
   <data name="seedTextBox.ToolTip" xml:space="preserve">
     <value>Set the seed for the random number generator.
 Prefix the string with "\x" to use a hex number.
